fixed button
most difficult part is getting the position and sizing, it looks wrong to me but I took the dimensions from figma.

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,11 @@ button:focus {
     color: var(--white-color);
     cursor: pointer;
 }
+.request:hover,
+.request:focus{
+    background-color: var(--button-color);
+    color:var(--highlight-color)
+}
 
 /*make bullet-points go away*/
 ul {
